--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,7 +2,7 @@
     display: flex;
     .homeContainer {
         flex: 6;
-
+        padding: 30px 30px 0 30px;
         .widgets, .chart {
             display: flex;
             padding: 20px;
