--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -11,7 +11,7 @@
         justify-content: center;
 
         .logo {
-            font-size: 20px;
+            font-size: 28px;
             font-weight: bold;
             color: #1f5ce0;
         }
@@ -31,9 +31,9 @@
             padding: 0;
 
             .title {
-                font-size: 10px;
+                font-size: 13px;
                 font-weight: bold;
-                color: gray;
+                color: rgb(68, 46, 46);
                 margin-top: 15px;
                 margin-bottom: 5px;
             }
@@ -50,13 +50,13 @@
 
                 .icon {
                     font-size: 18px;
-                    color: #1f5ce0;
+                    color: #3e64b6;
                 }
 
                 span {
-                    font-size: 13px;
+                    font-size: 20px;
                     font-weight: 600;
-                    color: #888;
+                    color: #312929;
                     margin-left: 10px;
                 }
             }
