--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
 a {
     text-decoration: none !important;
 }
+*{
+    font-family: "-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif";
+    font-size: 17px;
+}
